--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.2"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.example.souleman.rssreader"
         minSdkVersion 8
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-    }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    //compile 'com.android.support:appcompat-v7:20.0.0'
-    compile 'com.android.support:support-v4:21.0.3'
-    compile 'com.google.code.gson:gson:2.2.4'
 
-    compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.android.support:cardview-v7:21.0.+'
-    compile group: 'com.squareup.picasso', name:'picasso', version : '2.3.4'
+    compile 'com.android.support:support-v4:23.1.1'
+    compile 'com.google.code.gson:gson:2.4'
+
+    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
