--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             android:name=".PostDetails"
             android:label="@string/app_name"></activity>
 
+        <provider android:name="com.example.souleman.rssreader.MyContentProvider"
+            android:authorities="com.example.souleman.rssreader.MyContentProvider" />
 
     </application>
 
