--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <!-- utilise lint il t'aidera a finir le fichier car il manque des données-->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
