--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
 
         <activity
             android:name=".PostDetails"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"/>
 
         <provider android:name="com.example.souleman.rssreader.MyContentProvider"
             android:authorities="com.example.souleman.rssreader.MyContentProvider" />
