--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
             android:name=".PostDetails"
             android:label="@string/app_name"/>
 
-        <provider android:name="com.example.souleman.rssreader.MyContentProvider"
+        <provider android:name=".PostDataProvider"
             android:authorities="com.example.souleman.rssreader" />
 
     </application>
